# prime_ros2_ws

./: README.md
src/primeu_description/: .gitignore  CMakeLists.txt  package.xml
src/primeu_description/assets/merged/: body_base_link_visual.stl  chest_link_collision.stl  left_elbow_pitch_link_collision.stl  left_shoulder_pitch_link_collision.stl  left_shoulder_roll_link_visual.stl  left_shoulder_yaw_link_collision.stl  left_wrist_pitch_link_collision.stl  left_wrist_roll_link_collision.stl  left_wrist_yaw_link_visual.stl  neck_pitch_link_visual.stl  neck_roll_link_visual.stl  neck_yaw_link_visual.stl  right_elbow_pitch_link_collision.stl  right_shoulder_pitch_link_visual.stl  right_shoulder_roll_link_collision.stl  right_shoulder_yaw_link_collision.stl  right_wrist_ptich_link_visual.stl  right_wrist_roll_link_visual.stl  right_wrist_yaw_link_visual.stl  waist_left_link_visual.stl  waist_left_passive_link_collision.stl  waist_right_link_collision.stl  waist_right_passive_link_visual.stl  (+2 more)
src/primeu_description/config/: tracker_retargeting.yaml
src/primeu_description/launch/: primeu_tracker_retargeting.launch.py
src/primeu_description/mjcf/: config.json  contact_logger.py  merge_primeu_with_wuji_hands.py  primeu_robot.xml  primeu_robot_with_wuji_hands.xml  robot_patch.xml  scene.xml  scene_with_wuji_hands.xml
src/primeu_description/scripts/: primeu_tracker_retargeting_node
src/primeu_description/urdf/: config.json  merge_primeu_with_wuji_hands.py  primeu_robot.urdf  primeu_robot_with_wuji_hands.urdf
src/primeu_description/wuji-hand-description/: README.md
(+8 files in other folders)
